add weather icon, link to repo, code tidy up

--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
             <h2 id="city" class="city-title"></h2>
             <div class="weather-overview">
               <div class="weather-info today">
-                <div id="temperature"></div>
+                <div class="temp">
+                  <div id="temp-icon"></div>
+                  <div id="temperature"></div>
+                </div>
                 <div class="city-details">
                   <div class="details">
                     <div id="date"></div>
@@ -59,6 +62,14 @@
             <div class="weather-info"></div>
           </div>
         </div>
+        <footer>
+          <small>
+            <a href="https://github.com/kcounta/shecodes-projects"
+              >Open source code</a
+            >
+            by Katerina Counta
+          </small>
+        </footer>
       </main>
     </div>
   </body>
