cleaner method for weather icons

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="weather-overview">
               <div class="weather-info today">
                 <div class="temp">
-                  <div id="temp-icon"></div>
+                  <img id="temp-icon" />
                   <div id="temperature"></div>
                 </div>
                 <div class="city-details">
