clean up js, add comments, semantic html

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <h1>Weather Forecast</h1>
       <main>
         <header>
-          <form>
+          <form id="weather-form">
             <input
               id="city-input"
               type="search"
               placeholder="Please enter a city"
             />
             <button type="submit" id="search-button"></button>
-            <button type="submit" id="current-location-button">
+            <button type="button" id="current-location-button">
               Get Current Location
             </button>
           </form>
