--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               id="city-input"
               type="search"
               placeholder="Please enter a city"
+              autocomplete="off"
             />
             <button type="submit" id="search-button"></button>
             <button type="button" id="current-location-button">
@@ -35,7 +36,13 @@
               <div class="weather-info today">
                 <div class="temp">
                   <img id="temp-icon" />
-                  <div id="temperature"></div>
+                  <div class="temp-container">
+                    <div id="temperature"></div>
+                    <div class="temp-units">
+                      <a href="#" class="celsius">°C</a
+                      ><a href="#" class="fahrenheit">°F</a>
+                    </div>
+                  </div>
                 </div>
                 <div class="city-details">
                   <div class="details">
