--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
             </div>
           </div>
 
-          <div class="weather future">
-            <div class="weather-info"></div>
-          </div>
+          <div class="weather forecast"></div>
         </div>
         <footer>
           <small>
